--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,25 +30,41 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  # hello: "Hello world"
-  title: "title"
-  memo: "memo"
-  author: "author"
-  picture: "picture"
-  books: "books"
-  show: "show"
-  edit: "edit"
-  destroy: "destroy"
-  new_book: "New Book"
-  back: "back"
-  create_book: "Create Book"
-  editing_book: "Editing Book"
-  are_you_sure: "Are you sure?"
-  book_was_successfully_created: "Book was successfully created."
-  book_was_successfully_updated: "Book was successfully updated."
-  book_was_successfully_destroyed: "Book was successfully destroyed."
-  helpers:
-    submit:
-      create: "create"
-      update: "update"
-      submit: "submit"
+  books:
+    index:
+      title: "title"
+      memo: "memo"
+      author: "author"
+      picture: "picture"
+      books: "books"
+      show: "show"
+      edit: "edit"
+      destroy: "destroy"
+      new_book: "New Book"
+      are_you_sure: "Are you sure?"
+    new:
+      new_book: "New Book"
+      back: "back"
+    form:
+      title: "title"
+      memo: "memo"
+      author: "author"
+      picture: "picture"
+    edit:
+      show: "show"
+      back: "back"
+      editing_book: "Editing Book"
+    show:
+      title: "title"
+      memo: "memo"
+      author: "author"
+      picture: "picture"
+      edit: "edit"
+      back: "back"
+    create:
+      book_was_successfully_created: "Book was successfully created."
+    update:
+      book_was_successfully_updated: "Book was successfully updated."
+    destroy:
+      book_was_successfully_destroyed: "Book was successfully destroyed."
+
